--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
+@import url('./common.css');
 @import url('./animations.css');
 /* Sections style */
 @import url('./header.css');
