bugfix/remove-transition-delay

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -111,7 +111,7 @@ a {
   border-radius: 12px;
   padding: 14px 32px;
   border: none;
-  transition: 250ms var(--common-transition);
+  transition: var(--common-transition);
   transition-property: background-color, color;
 }
 
