--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,148 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container">
+    <nav class="header-nav">
+      <div class="nav-logo">
+        <a href="/"> english<span class="logo-span">excellence</span>. </a>
+      </div>
+
+      <button
+        type="button"
+        class="burger-btn js-open-menu"
+        aria-expanded="false"
+        aria-controls="header__mobile"
+      >
+        <svg class="burger-icon" aria-label="toggles mobile menu" role="img">
+          <use class="icon--mobile" href="../img/icons.svg#icon-nav"></use>
+          <use class="icon--wide" href="../img/icons.svg#icon-nav_bold"></use>
+        </svg>
+      </button>
+
+      <nav class="page-nav">
+        <ul class="header-nav-list">
+          <li class="nav-item">
+            <a href="#about" class="nav-link">About us</a>
+          </li>
+          <li class="nav-item">
+            <a href="#lessons" class="nav-link">Our lessons</a>
+          </li>
+          <li class="nav-item">
+            <a href="#teachers" class="nav-link">Teachers</a>
+          </li>
+          <li class="nav-item">
+            <a href="#reviews" class="nav-link">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contacts" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="social">
+        <ul class="social-list">
+          <li class="header-nav-item">
+            <a
+              class="social-link header-link"
+              href="https://www.facebook.com/goITclub/"
+            >
+              <svg class="social-icon" width="26" height="26">
+                <use href="../img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-nav-item">
+            <a
+              class="social-link header-link"
+              href="https://www.instagram.com/goitclub/"
+            >
+              <svg class="social-icon" width="26" height="26">
+                <use href="../img/icons.svg#icon-insta"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-nav-item">
+            <a
+              class="social-link header-link"
+              href="https://www.youtube.com/c/GoIT"
+            >
+              <svg class="social-icon" width="26" height="26">
+                <use href="../img/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!--   header   modal-->
+    <div
+      class="burger_modal js-menu-container"
+      id="header__mobile"
+      role="dialog"
+      aria-modal="true"
+    >
+      <div class="burger_container">
+        <button
+          type="button"
+          class="close-btn js-close-menu"
+          aria-label="close menu"
+        >
+          <svg class="modal-close" role="img">
+            <use class="icon--mobile" href="../img/icons.svg#icon-close"></use>
+            <use
+              class="icon--wide"
+              href="../img/icons.svg#icon-close_bold"
+            ></use>
+          </svg>
+        </button>
+
+        <nav class="modal-nav">
+          <ul class="modal-nav-list">
+            <li class="modal-nav-item">
+              <a href="#about" class="nav-link mobile-menu-list">About us</a>
+            </li>
+            <li class="modal-nav-item">
+              <a href="#lessons" class="nav-link mobile-menu-list"
+                >Our lessons</a
+              >
+            </li>
+            <li class="modal-nav-item">
+              <a href="#teachers" class="nav-link mobile-menu-list">Teachers</a>
+            </li>
+            <li class="modal-nav-item">
+              <a href="#reviews" class="nav-link mobile-menu-list">Reviews</a>
+            </li>
+            <li class="modal-nav-item">
+              <a href="#contacts" class="nav-link mobile-menu-list">Contact</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="modal_social">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-link" href="https://www.facebook.com/goITclub/">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="../img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.instagram.com/goitclub/">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="../img/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.youtube.com/c/GoIT">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="../img/icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
