--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,3 +1,41 @@
 <section class="about">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="section-title">About <span>Us</span></h2>
+    <p class="section-subtitle">
+      We are dedicated to providing engaging and effective English language
+      courses in a supportive and stimulating learning environment
+    </p>
+
+    <div class="about-wrapper">
+      <ul class="about-list">
+        <li class="about-item">
+          <p class="about-item-number">01</p>
+          <p class="about-item-text">Expert, innovative teaching staff</p>
+        </li>
+        <li class="about-item">
+          <p class="about-item-number">02</p>
+          <p class="about-item-text">Wide range of course levels and options</p>
+        </li>
+        <li class="about-item">
+          <p class="about-item-number">03</p>
+          <p class="about-item-text">Multicultural learning environment</p>
+        </li>
+        <li class="about-item">
+          <p class="about-item-number">04</p>
+          <p class="about-item-text">Comprehensive language support services</p>
+        </li>
+      </ul>
+
+      <div class="img_box">
+        <img
+          class="about_img"
+          srcset="../img/memoji/memoji.png 1x, ../img/memoji/memoji@2x.png 2x"
+          src="../img/memoji/memoji.png"
+          alt="Portrait of teacher"
+          width="254"
+          height="211"
+        />
+      </div>
+    </div>
+  </div>
 </section>
