--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -1,3 +1,90 @@
-.mock {
-  display: none;
+.about {
+  padding: 80px 0;
+
+  @media screen and (min-width: 768px) {
+    padding: 100px 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 96px 0 150px 0;
+  }
+}
+
+.about-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  @media screen and (min-width: 768px) {
+    gap: 32px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 32px;
+    align-items: stretch;
+  }
+}
+
+.about-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+}
+
+.about-item {
+  width: 100%;
+  padding: 32px;
+  border-radius: 16px;
+  background: var(--gray);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 32px) / 2);
+  }
+}
+
+.about-item-number {
+  color: var(--green);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: -0.02em;
+  margin-bottom: 16px;
+}
+
+.about-item-text {
+  color: var(--black);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+}
+
+.img_box {
+  width: 100%;
+  padding: 68px 0 72px 0;
+  border-radius: 16px;
+  background: #4dc274;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    padding: 34px 0 36px 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 88px 0 92px 0;
+  }
 }
