--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -7,24 +7,20 @@
     </p>
 
     <div class="about-wrapper">
-      <ul class="about-list">
+      <ol class="about-list">
         <li class="about-item">
-          <p class="about-item-number">01</p>
           <p class="about-item-text">Expert, innovative teaching staff</p>
         </li>
         <li class="about-item">
-          <p class="about-item-number">02</p>
           <p class="about-item-text">Wide range of course levels and options</p>
         </li>
         <li class="about-item">
-          <p class="about-item-number">03</p>
           <p class="about-item-text">Multicultural learning environment</p>
         </li>
         <li class="about-item">
-          <p class="about-item-number">04</p>
           <p class="about-item-text">Comprehensive language support services</p>
         </li>
-      </ul>
+      </ol>
 
       <div class="img_box">
         <img
