--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -35,6 +35,8 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  list-style: none;
+  counter-reset: aboutCount;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
@@ -45,22 +47,28 @@
 
 .about-item {
   width: 100%;
-  padding: 32px;
+  padding: 80px 32px 32px 32px;
   border-radius: 16px;
   background: var(--gray);
+
+  counter-increment: aboutCount;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 32px) / 2);
   }
 }
 
-.about-item-number {
+.about-item::before {
+  content: counter(aboutCount, decimal-leading-zero);
+  position: absolute;
+  left: 32px;
+  top: 32px;
   color: var(--green);
   font-size: 28px;
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: -0.02em;
-  margin-bottom: 16px;
 }
 
 .about-item-text {
