--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -1,12 +1,12 @@
 .about {
-  padding: 80px 0;
+  margin-bottom: 80px;
 
   @media screen and (min-width: 768px) {
-    padding: 100px 0;
+    margin-bottom: 100px;
   }
 
   @media screen and (min-width: 1280px) {
-    padding: 96px 0 150px 0;
+    margin-bottom: 150px;
   }
 }
 
