--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -1,15 +1,3 @@
-.about {
-  margin-bottom: 80px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 100px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 150px;
-  }
-}
-
 .about-wrapper {
   width: 100%;
   display: flex;
@@ -37,6 +25,8 @@
   gap: 20px;
   list-style: none;
   counter-reset: aboutCount;
+  margin: 0;
+  padding: 0;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
