--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -1,3 +1,189 @@
 .mock {
   display: none;
 }
+
+.modal-form {
+  width: 100%;
+}
+/* .form-field {
+  position: relative;
+} */
+
+/* .form-container {
+  margin-bottom: 8px;
+} */
+
+/* .form-field textarea::placeholder {
+  color: red
+} */
+
+.form-input {
+  display: block;
+  box-sizing: border-box;
+  padding: 16px 16px 16px 18px;
+  width: 100%;
+  /* width: 335px; */
+  height: 50px;
+  border: 1px solid rgba(18, 20, 23, 0.1);
+  border-radius: 12px;
+  outline: transparent;
+  background-color: transparent;
+  color: var(--black);
+  margin-bottom: 18px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .input-container {
+  color: var(--green);
+}
+
+.form-input:focus {
+  border: 1px solid var(--green);
+}
+
+/* .form-label {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+  width: 100%;
+  height: 15px;
+} */
+
+/* textarea */
+.textarea-container {
+  margin-bottom: 18px;
+}
+
+textarea {
+  width: 100%;
+  max-height: 94px;
+  border: 1px solid rgba(18, 20, 23, 0.1);
+  border-radius: 12px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: 0;
+  background-color: transparent;
+  color: rgba(18, 20, 23, 1);
+  padding: 16px 18px;
+  resize: none;
+  outline: transparent;
+}
+.form-textarea {
+  resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea:focus {
+  border: 1px solid var(--green);
+}
+
+.textarea-container textarea::placeholder {
+   color: var(--black 10%);
+}
+
+.text-link {
+  /* margin-left: 27px; */
+  /* color: var(--green); */
+  text-decoration: underline;
+}
+
+.text-link:hover {
+  /* margin-left: 27px; */
+  color: var(--green);
+  text-decoration: underline;
+}
+
+.leave-item-text-down {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0%;
+  color: rgba(18, 20, 23, 0.5);
+  margin-top: 16px;
+}
+
+.leave-item-text-up {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0%;
+  text-align: center;
+  color: rgba(18, 20, 23, 0.8);
+  margin-bottom: 20px;
+}
+
+.form-input::placeholder {
+  color: var(--black 10%);
+}
+  
+  .radio{
+  margin-bottom: 40px;
+}
+
+.radio-text{
+font-weight: 600;
+font-size: 18px;
+line-height: 1.33;
+letter-spacing: -0,02;
+color: var(--black);
+margin-bottom: 14px;
+}
+
+/* .radio input[type="radio"] {
+  margin: 0; 
+  margin-right: 8px;
+  color: red;
+} */
+
+.radio label {
+ display: flex;           /* робимо flex-контейнер */
+  align-items: center;     /* вирівнювання по вертикалі */
+  gap: 8px;                /* відстань між кружечком і текстом */
+  cursor: pointer;
+
+
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0,02;
+/* text-align: center; */
+color: var(--black);
+
+}
+
+input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #12141733; /* зелена рамка */
+  border-radius: 50%;
+  background-color: white;   /* білий фон */
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  margin: 0; /* щоб не було лишніх відступів */
+}
+
+input[type="radio"]:checked {
+  border-color: var(--green);
+}
+
+input[type="radio"]:checked::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  background-color:var(--green);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
