--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -22,9 +22,9 @@
         <ul class="review-track">
           <li class="review-item">
             <div class="info-box">
-              <div class="img_box">
+              <div class="review-img-box">
                 <img
-                  class="about_img"
+                  class="review-img"
                   srcset="
                     ../img/students/img-5@1x.jpg 1x,
                     ../img/students/img-5@2x.jpg 2x
@@ -35,8 +35,10 @@
                   height="50"
                 />
               </div>
-              <h3 class="info-title">Anna</h3>
-              <h4 class="info-subtitle">Student</h4>
+              <div class="review-info">
+                <h3 class="info-title">Anna</h3>
+                <h4 class="info-subtitle">Student</h4>
+              </div>
             </div>
             <p class="review-text">
               My experience at the language school has been nothing short of
@@ -47,9 +49,9 @@
 
           <li class="review-item">
             <div class="info-box">
-              <div class="img_box">
+              <div class="review-img-box">
                 <img
-                  class="about_img"
+                  class="review-img"
                   srcset="
                     ../img/students/img-6@1x.jpg 1x,
                     ../img/students/img-6@2x.jpg 2x
@@ -60,8 +62,10 @@
                   height="50"
                 />
               </div>
-              <h3 class="info-title">Mykhailo</h3>
-              <h4 class="info-subtitle">Student</h4>
+              <div class="review-info">
+                <h3 class="info-title">Mykhailo</h3>
+                <h4 class="info-subtitle">Student</h4>
+              </div>
             </div>
             <p class="review-text">
               The school offers a great balance of language theory and practical
@@ -72,9 +76,9 @@
 
           <li class="review-item">
             <div class="info-box">
-              <div class="img_box">
+              <div class="review-img-box">
                 <img
-                  class="about_img"
+                  class="review-img"
                   srcset="
                     ../img/students/img-7@1x.jpg 1x,
                     ../img/students/img-7@2x.jpg 2x
@@ -85,8 +89,11 @@
                   height="50"
                 />
               </div>
-              <h3 class="info-title">Victoria</h3>
-              <h4 class="info-subtitle">Student</h4>
+
+              <div class="review-info">
+                <h3 class="info-title">Victoria</h3>
+                <h4 class="info-subtitle">Student</h4>
+              </div>
             </div>
             <p class="review-text">
               I love the dynamic and interactive teaching methods used here.
