--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -47,7 +47,7 @@
   }
 }
 
-.img_box {
+.review-img-box {
   grid-area: img;
   width: 50px;
   height: 50px;
@@ -58,10 +58,16 @@
   overflow: hidden;
 }
 
-.about_img {
+.review-img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.review-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
 }
 
 .info-title {
