--- a/src/partials/our_lessons.html
+++ b/src/partials/our_lessons.html
@@ -1,5 +1,5 @@
 <!-- Start our lessons section -->
-<section id="lessons" class="section lesson-section ">
+<section id="lessons" class="section lesson-section">
   <div class="container">
     <h2 class="section-title">Our <span>lessons</span></h2>
     <p class="section-subtitle">
@@ -28,7 +28,7 @@
           all key areas of English language - reading, writing, listening, and
           speaking. It is a set of basic knowledge and skills.
         </p>
-        <a href="#application-form" class="button lesson-button active"
+        <a href="#application-form" class="button outlined-button lesson-button"
           >Leave an application</a
         >
       </li>
