--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -2,10 +2,11 @@
 <section id="proposal" class="section proposal-section">
   <div class="container">
     <div class="proposal-container">
-      <h2 class="title">
+      <h2 class="visually-hidden">Proposal to leave an application</h2>
+      <p class="title">
         Master the <span class="title-language">Language</span> with Our English
         Package!
-      </h2>
+      </p>
       <div class="proposal-inner">
         <div class="proposal-wrapper">
           <p class="proposal-text">Power of English</p>
