Proposal to leave an application Section (#7)
* Complete Proposal section

* Implemented visually hidden title for the section

---------

Co-authored-by: Maiia Hunko <masha.gunko96gmail.com>

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -79,7 +79,7 @@
 }
 
 .info-subtitle {
-  color: var(--white-review-text);
+  color: var(--white-container);
   font-size: 12px;
   font-weight: 400;
   line-height: 1.33;
