--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,3 +1,80 @@
-<section id="proposal" class="section proposal-container">
-  <div class="container proposal"></div>
+<!-- Start our Proposal section -->
+<section id="proposal" class="section proposal-section">
+  <div class="container">
+    <div class="proposal-container">
+      <h2 class="visually-hidden">Proposal to leave an application</h2>
+      <p class="title">
+        Master the <span class="title-language">Language</span> with Our English
+        Package!
+      </p>
+      <div class="proposal-inner">
+        <div class="proposal-wrapper">
+          <p class="proposal-text">Power of English</p>
+          <ul class="proposal-list">
+            <li class="proposal-item">
+              <div class="icon-wrapper">
+                <svg class="check-icon" width="14" height="14">
+                  <use href="./img/icons.svg#icon-check"></use>
+                </svg>
+              </div>
+              <p class="proposal-item-text">
+                Dive into captivating lessons designed to stimulate your
+                curiosity.
+              </p>
+            </li>
+            <li class="proposal-item">
+              <div class="icon-wrapper">
+                <svg class="check-icon" width="14" height="14">
+                  <use href="./img/icons.svg#icon-check"></use>
+                </svg>
+              </div>
+              <p class="proposal-item-text">
+                Learn in a nurturing setting where every student's progress
+                matters.
+              </p>
+            </li>
+            <li class="proposal-item">
+              <div class="icon-wrapper">
+                <svg class="check-icon" width="14" height="14">
+                  <use href="./img/icons.svg#icon-check"></use>
+                </svg>
+              </div>
+              <p class="proposal-item-text">
+                Experience the satisfaction of real progress as your language
+                skills and confidence grow with every session.
+              </p>
+            </li>
+          </ul>
+          <a href="#application-form" class="button proposal-button"
+            >Leave an application</a
+          >
+          <div class="books-image-wrapper">
+            <picture>
+              <source
+                srcset="
+                  ../img/books//books@1x.avif 1x,
+                  ../img/books//books@2x.avif 2x
+                "
+                type="image/avif"
+              />
+              <source
+                srcset="
+                  ../img/books/books@1x.png 1x,
+                  ../img/books/books@2x.png 2x
+                "
+              />
+              <img
+                src="../img/books/books@1x.png"
+                alt="Tall stack of books"
+                class="books-img"
+                width="214"
+                height="263"
+              />
+            </picture>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+<!-- End our Proposal section -->
