--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -25,8 +25,8 @@
       <div class="img_box">
         <img
           class="about_img"
-          srcset="../img/memoji/memoji.png 1x, ../img/memoji/memoji@2x.png 2x"
-          src="../img/memoji/memoji.png"
+          srcset="img/memoji/memoji.png, img/memoji/memoji@2x.png 2x"
+          src="img/memoji/memoji.png"
           alt="Portrait of teacher"
           width="254"
           height="211"
