--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -51,20 +51,14 @@
           <div class="books-image-wrapper">
             <picture>
               <source
-                srcset="
-                  ../img/books//books@1x.avif 1x,
-                  ../img/books//books@2x.avif 2x
-                "
+                srcset="img/books/books@1x.avif 1x, img/books/books@2x.avif 2x"
                 type="image/avif"
               />
               <source
-                srcset="
-                  ../img/books/books@1x.png 1x,
-                  ../img/books/books@2x.png 2x
-                "
+                srcset="img/books/books@1x.png 1x, img/books/books@2x.png 2x"
               />
               <img
-                src="../img/books/books@1x.png"
+                src="img/books/books@1x.png"
                 alt="Tall stack of books"
                 class="books-img"
                 width="214"
