--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -26,10 +26,10 @@
                 <img
                   class="review-img"
                   srcset="
-                    ../img/students/img-5@1x.jpg 1x,
-                    ../img/students/img-5@2x.jpg 2x
+                    img/students/img-5@1x.jpg,
+                    img/students/img-5@2x.jpg 2x
                   "
-                  src="../img/students/img-5@1x.jpg"
+                  src="img/students/img-5@1x.jpg"
                   alt="Anna, student"
                   width="50"
                   height="50"
@@ -53,10 +53,10 @@
                 <img
                   class="review-img"
                   srcset="
-                    ../img/students/img-6@1x.jpg 1x,
-                    ../img/students/img-6@2x.jpg 2x
+                    img/students/img-6@1x.jpg,
+                    img/students/img-6@2x.jpg 2x
                   "
-                  src="../img/students/img-6@1x.jpg"
+                  src="img/students/img-6@1x.jpg"
                   alt="Mykhailo, student"
                   width="50"
                   height="50"
@@ -80,10 +80,10 @@
                 <img
                   class="review-img"
                   srcset="
-                    ../img/students/img-7@1x.jpg 1x,
-                    ../img/students/img-7@2x.jpg 2x
+                    img/students/img-7@1x.jpg,
+                    img/students/img-7@2x.jpg 2x
                   "
-                  src="../img/students/img-7@1x.jpg"
+                  src="img/students/img-7@1x.jpg"
                   alt="Victoria, student"
                   width="50"
                   height="50"
