bugfix/fix-svg-and-redo-animations

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,8 +12,8 @@
         aria-controls="header__mobile"
       >
         <svg class="burger-icon" aria-label="toggles mobile menu" role="img">
-          <use class="icon--mobile" href="../img/icons.svg#icon-nav"></use>
-          <use class="icon--wide" href="../img/icons.svg#icon-nav_bold"></use>
+          <use class="icon--mobile" href="/img/icons.svg#icon-nav"></use>
+          <use class="icon--wide" href="/img/icons.svg#icon-nav_bold"></use>
         </svg>
       </button>
 
@@ -45,7 +45,7 @@
               href="https://www.facebook.com/goITclub/"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="../img/icons.svg#icon-facebook"></use>
+                <use href="/img/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -55,7 +55,7 @@
               href="https://www.instagram.com/goitclub/"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="../img/icons.svg#icon-insta"></use>
+                <use href="/img/icons.svg#icon-insta"></use>
               </svg>
             </a>
           </li>
@@ -65,7 +65,7 @@
               href="https://www.youtube.com/c/GoIT"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="../img/icons.svg#icon-youtube"></use>
+                <use href="/img/icons.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
@@ -87,11 +87,8 @@
           aria-label="close menu"
         >
           <svg class="modal-close" role="img">
-            <use class="icon--mobile" href="../img/icons.svg#icon-close"></use>
-            <use
-              class="icon--wide"
-              href="../img/icons.svg#icon-close_bold"
-            ></use>
+            <use class="icon--mobile" href="/img/icons.svg#icon-close"></use>
+            <use class="icon--wide" href="/img/icons.svg#icon-close_bold"></use>
           </svg>
         </button>
 
@@ -122,21 +119,21 @@
             <li class="social-item">
               <a class="social-link" href="https://www.facebook.com/goITclub/">
                 <svg class="social-icon" width="26" height="26">
-                  <use href="../img/icons.svg#icon-facebook"></use>
+                  <use href="/img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="https://www.instagram.com/goitclub/">
                 <svg class="social-icon" width="26" height="26">
-                  <use href="../img/icons.svg#icon-insta"></use>
+                  <use href="/img/icons.svg#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="https://www.youtube.com/c/GoIT">
                 <svg class="social-icon" width="26" height="26">
-                  <use href="../img/icons.svg#icon-youtube"></use>
+                  <use href="/img/icons.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
