--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -14,7 +14,7 @@
           height="24"
           aria-hidden="true"
         >
-          <use href="../img/icons.svg#icon-checkmark"></use>
+          <use href="/img/icons.svg#icon-checkmark"></use>
         </svg>
       </button>
 
@@ -111,7 +111,7 @@
           height="24"
           aria-hidden="true"
         >
-          <use href="../img/icons.svg#icon-checkmark"></use>
+          <use href="/img/icons.svg#icon-checkmark"></use>
         </svg>
       </button>
     </div>
