--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -19,7 +19,7 @@
         <!-- </div> -->
       </div>
       <div class="form-container">
-        <!-- <label class="form-label" for="phone">Phone</label> -->
+        <label class="visually-hidden" for="phone">Phone</label>
         <!-- <div class="form-field"> -->
         <input
           class="form-input"
@@ -31,7 +31,7 @@
         <!-- </div> -->
       </div>
       <div class="form-container">
-        <!-- <label class="form-label" for="mail">Email</label> -->
+        <label class="visually-hidden" for="mail">Email</label>
         <!-- <div class="form-field"> -->
         <input
           class="form-input"
@@ -43,7 +43,7 @@
         <!-- </div> -->
       </div>
       <div class="textarea-container">
-        <!-- <label class="form-label" for="user-comment">Comment</label> -->
+        <label class="visually-hidden" for="user-comment">Comment</label>
         <textarea
           name="user-comment"
           class="form-textarea"
