--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -2,8 +2,23 @@
   display: none;
 }
 
+/* .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(100%);
+  white-space: nowrap;
+  border: 0;
+} */
+
 .modal-form {
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* .form-field {
   position: relative;
