Complete Our Teachers Page

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,6 +6,7 @@
   --light-green: #d4fde1;
   --lighter-green: #bee8cc;
   --gray: #f3f5f6;
+  --gray-text-color: rgba(18, 20, 23, 0.5);
   --white: #fff;
   --white-border: rgba(255, 255, 255, 0.1);
   --white-button-text: rgba(255, 255, 255, 0.4);
