--- a/src/partials/our_teachers.html
+++ b/src/partials/our_teachers.html
@@ -1,3 +1,137 @@
 <section id="teachers" class="section teachers-section">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="section-title">Meet our <span>teachers</span></h2>
+    <p class="section-subtitle">
+      Discover our team of dedicated educators, committed to guiding you on your
+      journey to English proficiency with personalized and engaging instruction
+    </p>
+    <ul class="teachers-card-list">
+      <li class="teachers-card">
+        <picture>
+          <source
+            srcset="
+              ../img/teachers/teacher-1@1x.avif 1x,
+              ../img/teachers/teacher-1@2x.avif 2x
+            "
+            type="image/avif"
+          />
+          <source
+            srcset="
+              ../img/teachers/teacher-1@1x.png 1x,
+              ../img/teachers/teacher-1@2x.png 2x
+            "
+          />
+          <img
+            src="../img/teachers/teacher-1@1x.png"
+            alt="Teacher's avatar. Girl on the gray background."
+            class="teacher-img"
+            width="150"
+            height="150"
+          />
+        </picture>
+        <div class="teachers-card-footer">
+          <h3 class="teachers-card-title">Maria</h3>
+          <p class="teachers-text">
+            A seasoned linguist and our primary specialist in beginner-level
+            instruction, Maria brings warmth and patience to every class
+          </p>
+        </div>
+      </li>
+      <li class="teachers-card">
+        <picture>
+          <source
+            srcset="
+              ../img/teachers/teacher-2@1x.avif 1x,
+              ../img/teachers/teacher-2@2x.avif 2x
+            "
+            type="image/avif"
+          />
+          <source
+            srcset="
+              ../img/teachers/teacher-2@1x.png 1x,
+              ../img/teachers/teacher-2@2x.png 2x
+            "
+          />
+          <img
+            src="../img/teachers/teacher-2@1x.png"
+            alt="Teacher's avatar. Boy on the light-brown background."
+            class="teacher-img"
+            width="150"
+            height="150"
+          />
+        </picture>
+        <div class="teachers-card-footer">
+          <h3 class="teachers-card-title">Artem</h3>
+          <p class="teachers-text">
+            With his innovative teaching techniques and a focus on interactive
+            learning, Artem excels in keeping students engaged and motivated
+          </p>
+        </div>
+      </li>
+      <li class="teachers-card">
+        <picture>
+          <source
+            srcset="
+              ../img/teachers/teacher-3@1x.avif 1x,
+              ../img/teachers/teacher-3@2x.avif 2x
+            "
+            type="image/avif"
+          />
+          <source
+            srcset="
+              ../img/teachers/teacher-3@1x.png 1x,
+              ../img/teachers/teacher-3@2x.png 2x
+            "
+          />
+          <img
+            src="../img/teachers/teacher-3@1x.png"
+            alt="Teacher's avatar. Boy on the light-brown background."
+            class="teacher-img"
+            width="150"
+            height="150"
+          />
+        </picture>
+        <div class="teachers-card-footer">
+          <h3 class="teachers-card-title">Ilona</h3>
+          <p class="teachers-text">
+            A specialist in advanced English, Ilona provides intensive
+            instruction, ensuring students gain confidence in complex language
+            tasks
+          </p>
+        </div>
+      </li>
+      <li class="teachers-card">
+        <picture>
+          <source
+            srcset="
+              ../img/teachers/teacher-4@1x.avif 1x,
+              ../img/teachers/teacher-4@2x.avif 2x
+            "
+            type="image/avif"
+          />
+          <source
+            srcset="
+              ../img/teachers/teacher-4@1x.png 1x,
+              ../img/teachers/teacher-4@2x.png 2x
+            "
+          />
+          <img
+            src="../img/teachers/teacher-4@1x.png"
+            alt="Teacher's avatar. Boy on the light-brown background."
+            class="teacher-img"
+            width="150"
+            height="150"
+          />
+        </picture>
+        <div class="teachers-card-footer">
+          <h3 class="teachers-card-title">Volodymyr</h3>
+          <p class="teachers-text">
+            Our expert in English for specific purposes, Volodymyr tailors his
+            approach to meet individual career and industry-specific language
+            needs
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
