--- a/src/css/our_teachers.css
+++ b/src/css/our_teachers.css
@@ -1,3 +1,55 @@
-.mock {
-  display: none;
+.teachers-card-footer {
+  text-align: center;
+}
+
+.teachers-card-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.4px;
+  margin-bottom: 8px;
+  text-transform: capitalize;
+}
+
+.teachers-text {
+  color: var(--gray-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.teacher-img {
+  margin: 0 auto 16px auto;
+}
+
+@media screen and (max-width: 767px) {
+  .teachers-card:not(:last-child) {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .teachers-card-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+
+  .teachers-card {
+    width: calc((100% - 1 * 32px) / 2);
+  }
+
+  .teachers-text {
+    font-size: inherit;
+    line-height: inherit;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .teachers-card-list {
+    gap: 32px;
+  }
+
+  .teachers-card {
+    width: calc((100% - 3 * 32px) / 4);
+  }
 }
